admin/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: adminmutosi-service-dev
  namespace: dev
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    #nodePort: 30639
  selector:
    app: adminmutosi-dev
