admin/1.pv_pvc_admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminmutosi-dev
  namespace: dev
spec:
  replicas: 5
  selector:
    matchLabels:
      app: adminmutosi-dev
  template:
    metadata:
      labels:
        app: adminmutosi-dev
    spec:
      volumes:
        - name: pv-ad-nfs-dev
          persistentVolumeClaim:
            claimName: pvc-ad-nfs-dev
      containers:
        - name: adminmutosi-dev
          image: registry.mutosi.com/admin:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: pv-ad-nfs-dev
      imagePullSecrets:
        - name: credentials-registry-dev
      nodeSelector:
        magnum.openstack.org/nodegroup: qas
---
apiVersion: v1
kind: Service
metadata:
  name: adminmutosi-service-dev
  namespace: dev
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31639
  selector:
    app: adminmutosi-dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adminmutosi-dev
  namespace: dev-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - qas-admin-omni.mutosi.com
      secretName: mts-cert-dev
  rules:
  - host: qas-admin-omni.mutosi.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: adminmutosi-service-dev
            port:
              number: 80
