admin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adminmutosi-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev-admin-omni.mutosi.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: adminmutosi-service-dev
            port:
              number: 80
